# crate-manager

./: .cm_rules  Cargo.toml  README.md
src/: crates.rs  main.rs
